# casparing

./: README.md  pyproject.toml  setup.py  test_CASPAR_astrometry.py
CASPAR/: CASPAR_allskymap.py  CASPAR_cornerplot.py  CASPAR_fitMMdot.py  CASPAR_plot_MMdot.py  CASPAR_plot_MMdotbyDiagnostic.py  CASPAR_plot_MMdotbySFR.py  CASPAR_plot_MdotAge.py  CASPAR_plot_physicalParamComparison.py  CASPAR_plot_variability.py  CASPAR_plotting.py  CASPAR_sortdata.py  CASPAR_util.py  Linear_fitting_ALLValues_LINMAX.csv
casparing/: __init__.py
casparing/data/accretion_data/: alcala2017_linear_fits.csv  caspar_columns.txt
casparing/data/parameters_data/: Association Ages and Distances.csv
casparing/data/parameters_data/models/: Baraffe_models.csv  mist_models.csv
casparing/data/parameters_data/sptype_temp_conversion/: HerczegHillenbrand_SpTyTeff_Numericized.txt  Pecaut_SpTyTeff_Numericized.txt
casparing/derive/: CASPAR_astrometry.py  CASPAR_data.py  CASPAR_rederiveaccretion.py  CASPAR_rederiveparameters.py  __init__.py  rederiveaccretion.py  rederiveparameters.py
casparing/plot/: CASPAR_Haprofile.py  CASPAR_allskymap.py  CASPAR_cornerplot.py  CASPAR_fitMMdot.py  CASPAR_plot_MMdot.py  CASPAR_plot_MMdotbyDiagnostic.py  CASPAR_plot_MMdotbySFR.py  CASPAR_plot_MdotAge.py  CASPAR_plot_physicalParamComparison.py  CASPAR_plot_variability.py  CASPAR_plotting.py  CASPAR_sortdata.py  CASPAR_util.py
tutorials/: astrometry_tutorial.ipynb  physical_parameters_tutorial.ipynb  plotting_tutorial.ipynb  rederive_accretion_tutorial.ipynb
